--- a/herwig++/PKGBUILD
+++ b/herwig++/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Daniel Mendler <mail at daniel-mendler.de>
 pkgname=herwig++
 pkgver=2.4.2
-pkgrel=1
+pkgrel=2
 pkgdesc="High Energy Physics Event Generator"
 arch=(i686 x86_64)
 url="http://projects.hepforge.org/herwig/"
@@ -17,5 +17,6 @@ build() {
   ./configure --prefix=/usr
   make
   make prefix=$pkgdir/usr install
+  find $pkgdir -name '*.la' -exec rm {} \;
 }
 
