man pages are automatically gzipped

--- a/pacgem-git/PKGBUILD
+++ b/pacgem-git/PKGBUILD
@@ -28,6 +28,5 @@ build() {
   msg "GIT checkout done or server timeout"
 
   install -D -m755 $_gitname/pacgem $pkgdir/usr/bin/pacgem
-  gzip $_gitname/pacgem.8
-  install -D -m644 $_gitname/pacgem.8.gz $pkgdir/usr/share/man/man8/pacgem.8.gz
+  install -D -m644 $_gitname/pacgem.8 $pkgdir/usr/share/man/man8/pacgem.8
 }
