--- a/pacgem-git/PKGBUILD
+++ b/pacgem-git/PKGBUILD
@@ -1,12 +1,12 @@
 # Contributor: Daniel Mendler <mail@daniel-mendler.de>
 
 pkgname=pacgem-git
-pkgver=20110207
+pkgver=20110208
 pkgrel=1
 pkgdesc="Install Ruby Gems as Arch Linux packages"
 arch=('any')
 url="http://github.com/minad/pacgem"
-license=('Ruby')
+license=('GPL')
 depends=('ruby')
 makedepends=('git')
 conflicts=('pacgem')
@@ -15,11 +15,11 @@ _gitroot="git://github.com/minad/pacgem.git"
 _gitname="pacgem"
 
 build() {
-  cd "$srcdir"
+  cd $srcdir
   msg "Connecting to GIT server...."
 
   if [ -d $_gitname ] ; then
-    cd $_gitname && git pull origin
+    (cd $_gitname; git pull origin)
     msg "The local files are updated."
   else
     git clone $_gitroot $_gitname
