--- a/herwig++/PKGBUILD
+++ b/herwig++/PKGBUILD
@@ -1,9 +1,8 @@
-# $Id$
 # Maintainer: Daniel Mendler <mail at daniel-mendler.de>
 # Contributor: Daniel Mendler <mail at daniel-mendler.de>
 pkgname=herwig++
 pkgver=2.4.2
-pkgrel=2
+pkgrel=3
 pkgdesc="High Energy Physics Event Generator"
 arch=(i686 x86_64)
 url="http://projects.hepforge.org/herwig/"
@@ -16,6 +15,9 @@ build() {
   cd $srcdir/Herwig++-$pkgver
   ./configure --prefix=/usr
   make
+}
+
+package() {
   make prefix=$pkgdir/usr install
 }
 
