--- a/thepeg/PKGBUILD
+++ b/thepeg/PKGBUILD
@@ -1,9 +1,8 @@
-# $Id$
 # Maintainer: Daniel Mendler <mail at daniel-mendler.de>
 # Contributor: Daniel Mendler <mail at daniel-mendler.de>
 pkgname=thepeg
 pkgver=1.6.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Toolkit for High Energy Physics Event Generation"
 arch=(i686 x86_64)
 url="http://home.thep.lu.se/ThePEG/"
@@ -16,7 +15,9 @@ build() {
   cd $srcdir/ThePEG-$pkgver
   ./configure --prefix=/usr
   make
+}
+
+package() {
   make prefix=$pkgdir/usr install
   rm $pkgdir/usr/lib/ThePEG/Makefile* $pkgdir/usr/lib/ThePEG/libtool
 }
-
