--- a/pacgem-git/PKGBUILD
+++ b/pacgem-git/PKGBUILD
@@ -1,8 +1,8 @@
-# Contributor: Daniel Mendler <mail@daniel-mendler.de>
-
+# Maintainer: Daniel Mendler <mail at daniel-mendler.de>
+# Contributor: Daniel Mendler <mail at daniel-mendler.de>
 pkgname=pacgem-git
 pkgver=20110208
-pkgrel=1
+pkgrel=2
 pkgdesc="Install Ruby Gems as Arch Linux packages"
 arch=('any')
 url="http://github.com/minad/pacgem"
@@ -26,7 +26,9 @@ build() {
   fi
 
   msg "GIT checkout done or server timeout"
+}
 
+package() {
   install -D -m755 $_gitname/pacgem $pkgdir/usr/bin/pacgem
   install -D -m644 $_gitname/pacgem.8 $pkgdir/usr/share/man/man8/pacgem.8
 }
